--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
     "test:unit": "jest src/utils/__tests__",
     "test:components": "jest src/components/__tests__",
     "test:changed": "jest --onlyChanged",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:migrate": "tsx src/db/migrate.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.9.1",
+    "@auth/neon-adapter": "^1.9.1",
     "@monaco-editor/react": "^4.7.0",
+    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-hover-card": "^1.1.13",
@@ -27,14 +33,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -47,6 +57,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "jest": "^29.7.0",
@@ -54,6 +66,7 @@
     "msw": "^2.8.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.3",
+    "postgres": "^3.4.5",
     "tailwindcss": "^4.1.6",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
