--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "drizzle-zod": "^0.7.1",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
