--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.1",
     "@auth/neon-adapter": "^1.9.1",
+    "@fontsource/open-sans": "^5.2.5",
     "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.7.0",
     "@neondatabase/serverless": "^1.0.0",
