--- a/package.json
+++ b/package.json
@@ -18,71 +18,82 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
     "@auth/drizzle-adapter": "^1.9.1",
     "@auth/neon-adapter": "^1.9.1",
     "@fontsource/open-sans": "^5.2.5",
     "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.7.0",
     "@neondatabase/serverless": "^1.0.0",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-hover-card": "^1.1.13",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.11",
-    "@uiw/react-md-editor": "^4.0.6",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@uiw/react-md-editor": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.1",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "dompurify": "^3.2.5",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.1",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.509.0",
+    "marked": "^15.0.12",
+    "motion": "^12.15.0",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-markdown": "^10.1.0",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.5",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
+    "usehooks-ts": "^3.1.1",
+    "uuid": "^11.1.0",
     "ws": "^8.18.2",
-    "zod": "^3.24.4"
+    "zod": "^3.25.48"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.6",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/pg": "^8.15.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.57",
+    "@types/pg": "^8.15.4",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^9",
+    "eslint": "^9.28.0",
     "eslint-config-next": "15.3.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "msw": "^2.8.2",
+    "msw": "^2.8.7",
     "node-fetch": "^3.3.2",
-    "postcss": "^8.5.3",
-    "postgres": "^3.4.5",
-    "tailwindcss": "^4.1.6",
-    "ts-jest": "^29.3.2",
+    "postcss": "^8.5.4",
+    "postgres": "^3.4.7",
+    "tailwindcss": "^4.1.8",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
-    "tw-animate-css": "^1.2.9",
-    "typescript": "^5",
-    "undici": "^7.9.0",
+    "tw-animate-css": "^1.3.3",
+    "typescript": "^5.8.3",
+    "undici": "^7.10.0",
     "web-streams-polyfill": "^4.1.0",
     "whatwg-fetch": "^3.6.20"
   }
