--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "ollama-ai-provider": "^1.2.0",
     "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
