--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:changed": "jest --onlyChanged",
     "test:coverage": "jest --coverage",
     "db:generate": "drizzle-kit generate:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -83,6 +84,7 @@
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.2",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "msw": "^2.9.0",
