--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install -g pnpm && pnpm install
 
       - name: Lint
         run: npm run lint
@@ -51,6 +51,15 @@ jobs:
       - name: Build app
         run: npm run build
 
-      # Optional: uncomment if you later add tests
-      # - name: Run tests
-      #   run: npm run test
+      - name: Install Playwright Browsers
+        run: pnpm exec playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: pnpm exec playwright test
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
