--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:unit": "jest src/utils/__tests__",
-    "test:components": "jest src/components/__tests__",
-    "test:changed": "jest --onlyChanged",
-    "test:coverage": "jest --coverage",
+    "test": "pnpm exec playwright test",
+    "test:ui": "pnpm exec playwright test --ui",
+    "test:failed": "npx playwright test --last-failed",
+    "show-report": "pnpm exec playwright show-report",
     "typecheck": "tsc --noEmit",
     "db:generate": "drizzle-kit generate:pg",
     "db:studio": "drizzle-kit studio",
@@ -74,6 +72,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -85,12 +84,14 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/ws": "^8.18.1",
+    "@vitejs/plugin-react": "^4.5.1",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
     "msw": "^2.9.0",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.4",
@@ -102,6 +103,8 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "undici": "^7.10.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.3",
     "web-streams-polyfill": "^4.1.0",
     "whatwg-fetch": "^3.6.20"
   }
