--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@uiw/react-md-editor": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.1",
+    "@upstash/redis": "^1.35.0",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -80,6 +81,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.57",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.6",
@@ -93,6 +95,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
+    "jsonwebtoken": "^9.0.2",
     "msw": "^2.9.0",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.4",
