--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -39,6 +39,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sentry/nextjs": "^9.28.0",
     "@uiw/react-md-editor": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.1",
     "@upstash/redis": "^1.35.0",
@@ -52,6 +53,7 @@
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.1",
     "framer-motion": "^12.16.0",
+    "import-in-the-middle": "^1.14.0",
     "lucide-react": "^0.509.0",
     "marked": "^15.0.12",
     "motion": "^12.16.0",
