alpha program init

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "typecheck": "tsc --noEmit",
     "db:generate": "drizzle-kit generate:pg",
     "db:studio": "drizzle-kit studio",
-    "prepare": "husky"
+    "prepare": "husky",
+    "stripe-webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -40,13 +41,17 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sentry/nextjs": "^9.28.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@uiw/react-md-editor": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.1",
+    "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.5.0",
     "diff": "^8.0.2",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
@@ -67,6 +72,7 @@
     "react-hook-form": "^7.57.0",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.5",
+    "stripe": "^18.2.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
     "usehooks-ts": "^3.1.1",
