--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "stripe-webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.12",
     "@auth/drizzle-adapter": "^1.9.1",
     "@auth/neon-adapter": "^1.9.1",
-    "@fontsource/open-sans": "^5.2.5",
-    "@hookform/resolvers": "^5.0.1",
+    "@fontsource/open-sans": "^5.2.6",
+    "@hookform/resolvers": "^5.1.1",
     "@monaco-editor/react": "^4.7.0",
-    "@neondatabase/serverless": "^1.0.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -40,7 +41,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@sentry/nextjs": "^9.28.0",
+    "@sentry/nextjs": "^9.29.0",
+    "@stripe/agent-toolkit": "^0.7.9",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@uiw/react-md-editor": "^4.0.7",
@@ -57,11 +59,11 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.1",
-    "framer-motion": "^12.16.0",
-    "import-in-the-middle": "^1.14.0",
+    "framer-motion": "^12.18.1",
+    "import-in-the-middle": "^1.14.2",
     "lucide-react": "^0.509.0",
     "marked": "^15.0.12",
-    "motion": "^12.16.0",
+    "motion": "^12.18.1",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.28",
     "next-themes": "^0.4.6",
@@ -74,44 +76,44 @@
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
     "swr": "^2.3.3",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.2",
-    "zod": "^3.25.51"
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@playwright/test": "^1.52.0",
-    "@tailwindcss/postcss": "^4.1.8",
+    "@playwright/test": "^1.53.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20.17.57",
+    "@types/node": "^20.19.0",
     "@types/pg": "^8.15.4",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/ws": "^8.18.1",
-    "@vitejs/plugin-react": "^4.5.1",
+    "@vitejs/plugin-react": "^4.5.2",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^9.28.0",
+    "eslint": "^9.29.0",
     "eslint-config-next": "15.3.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
-    "msw": "^2.9.0",
+    "msw": "^2.10.2",
     "node-fetch": "^3.3.2",
-    "postcss": "^8.5.4",
+    "postcss": "^8.5.5",
     "postgres": "^3.4.7",
-    "tailwindcss": "^4.1.8",
-    "ts-jest": "^29.3.4",
+    "tailwindcss": "^4.1.10",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "undici": "^7.10.0",
