pdf resume update

--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.1",
     "framer-motion": "^12.18.1",
+    "html2canvas": "^1.4.1",
     "import-in-the-middle": "^1.14.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.509.0",
     "marked": "^15.0.12",
     "motion": "^12.18.1",
