--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
       DATABASE_URL: postgres://postgres:postgres@localhost:5432/db
       # Sentry environment variables for source map upload and release creation
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      # Database URL for PostgreSQL service
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/db
       # Upstash Redis environment variables
       UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
       UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
