--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,10 +18,6 @@ jobs:
     name: Build & Deploy
     runs-on: ubuntu-latest
 
-    permissions:
-      id-token: write
-      contents: read
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -58,6 +54,32 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPO_NAME }}:${{ env.IMAGE_TAG }}
+
+      - name: Run db:migrate on the new image in ECS
+        id: run_migrate
+        run: |
+          export CLUSTER_NAME="markdowntailor-prod" # Update accordingly
+          export TASK_DEF=$(aws ecs describe-task-definition --task-definition markdowntailor-prod | jq -r '.taskDefinition.taskDefinitionArn')
+
+          # Run the ECS Task for migration
+          MIGRATION_TASK=$(aws ecs run-task \
+            --cluster "$CLUSTER_NAME" \
+            --launch-type FARGATE \
+            --task-definition "$TASK_DEF" \
+            --network-configuration "awsvpcConfiguration={subnets=[subnet-123,subnet-456],securityGroups=[sg-xxx],assignPublicIp=DISABLED}" \
+            --overrides '{"containerOverrides": [{"name": "markdowntailor-container","command":["pnpm","exec","db:migrate"]}]}' \
+            --count 1 \
+            | jq -r '.tasks[0].taskArn')
+
+          # Wait for migration task to complete
+          aws ecs wait tasks-stopped --cluster "$CLUSTER_NAME" --tasks "$MIGRATION_TASK"
+          EXIT_CODE=$(aws ecs describe-tasks --cluster "$CLUSTER_NAME" --tasks "$MIGRATION_TASK" | jq -r '.tasks[0].containers[0].exitCode')
+          if [ "$EXIT_CODE" != "0" ]; then
+            echo "Migration failed! exit code $EXIT_CODE"
+            exit 1
+          else
+            echo "Migration succeeded!"
+          fi
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
