--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Build, Lint, Typecheck, Test, Dockerize
+name: CICD
 
 on:
   push:
@@ -7,38 +7,72 @@ on:
     branches: [main]
 
 jobs:
-  build-test-containerize:
-    timeout-minutes: 30
-    name: Validate PR with pnpm
+  build-and-test:
+    name: Build & Test
     runs-on: ubuntu-latest
-    environment: development # Uses development environment variables
+    environment: development
+
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: db
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      # Database URL for PostgreSQL service (for local testing during build)
+      DATABASE_URL: postgres://postgres:postgres@localhost:5432/db
+      AUTH_DRIZZLE_URL: postgres://postgres:postgres@localhost:5432/db
+      # Sentry environment variables for source map upload and release creation
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      # Upstash Redis environment variables
+      UPSTASH_REDIS_REST_URL: ${{ secrets.UPSTASH_REDIS_REST_URL }}
+      UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+      # Stripe environment variables
+      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
+      # Auth.js secret for encryption
+      AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
 
-      - name: Install pnpm
-        run: npm install -g pnpm
-
       - name: Install dependencies
-        run: pnpm install
+
+        run: npm install -g pnpm && pnpm install --no-lockfile
 
       - name: Lint
-        run: pnpm run lint
+        run: npm run lint
 
       - name: Type check
-        run: pnpm run typecheck
-
-      - name: Run tests
-        run: pnpm run test
+        run: npm run typecheck
 
       - name: Build app
-        run: pnpm run build
+        run: npm run build
 
-      - name: Docker build (no push)
-        run: docker build -t markdowntailor .
+      - name: Install Playwright Browsers
+        run: pnpm exec playwright install --with-deps
+
+      - name: Run Playwright tests
+        run: pnpm exec playwright test
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
